# chat2DB

./: README.md  pyproject.toml  run_app.py  run_debug.py
assets/: file2
docs/: query_flow_example.md
scripts/: inspect_embeddings.py  migrate_graph_cards_with_descriptions.py  prewarm_metadata.ps1  prewarm_metadata.py  recover_cache.py  show_metadata.ps1  show_metadata.py  validate_cache.py
sqlai/: __init__.py
sqlai/agents/: query_agent.py
sqlai/database/: __init__.py  connectors.py  schema_introspector.py
sqlai/domain/: __init__.py  templates.py
sqlai/graph/: context.py
sqlai/guards/: __init__.py  sql_guard.py
sqlai/llm/: prompt_templates.py  providers.py
sqlai/semantic/: __init__.py
sqlai/services/: __init__.py  conversation_cache.py  metadata_cache.py  vector_store.py
src/sqlai/: config.py
src/sqlai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sqlai/agents/: __init__.py  guard.py  query_agent.py
src/sqlai/database/: schema_introspector.py
src/sqlai/embeddings/: __init__.py  provider.py
src/sqlai/graph/: __init__.py  context.py
src/sqlai/llm/: __init__.py  prompt_templates.py  providers.py
src/sqlai/semantic/: retriever.py
src/sqlai/services/: analytics_service.py  cache_health.py  conversation_cache.py  domain_fallbacks.py  graph_cache.py  metadata_cache.py  vector_store.py  visualization.py
src/sqlai/ui/: __init__.py  app.py  profile_store.py
src/sqlai/utils/: __init__.py  logging.py  sql_transpiler.py  vector_store_utils.py
tests/: __init__.py  test_cache_health.py  test_fk_expansion.py
(+1 files in other folders)
