 [project]
 name = "sqlai"
 version = "0.1.0"
 description = "Cross-database natural language analytics agent with visualization."
 authors = [{name = "SQLAI"}]
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.0.50",
    "sqlalchemy>=2.0.0",
    "oracledb>=2.0.0",
    "pandas>=2.1.0",
    "plotly>=5.20.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "tabulate>=0.9.0",
    "tenacity>=8.2.0",
    "huggingface-hub>=0.23.0",
    "langchain-huggingface>=0.1.0",
    "openai>=1.3.0",
    "langchain-openai>=0.1.0",
    "anthropic>=0.25.0",
    "langchain-anthropic>=0.1.0",
    "ollama>=0.3.0",
    "langchain-ollama>=0.1.0",
    "snowflake-sqlalchemy>=1.5.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "pyodbc>=5.1.0",
    "sqlparse>=0.4.4",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "chromadb>=0.5.0",
    "sqlglot>=24.0.0"
]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
 [tool.ruff]
 target-version = "py310"
 line-length = 100

